# docs_serv

./: .gitignore  Cargo.toml  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
src/: api.rs  docker-compose.yml   fs.rs  indexing.rs  main.rs
ui/: main.tsx  shortcuts.tsx  types.ts
ui/components/: breadcrumbs.tsx  file_explorer.tsx  file_system_item.tsx  file_system_list.tsx
ui/hooks/: use_tree_data.ts  use_tree_navigation.ts
ui/utils/: tree_utils.ts  url_utils.ts
